--- a/frontend-devo/index.html
+++ b/frontend-devo/index.html
@@ -19,7 +19,7 @@
     <link rel="shortcut icon" type="image/png" href="/src/assets/MikeAbas.svg" />
     
     <!-- add to homescreen for ios -->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="DEVO" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
